syntax = "proto3";

package tieba;

option java_package = "com.huanchengfly.tieba.post.api.models.protos";

import "Post.proto";

message PbTopAgreePost {
    repeated Post post_list = 1;
    repeated int64 post_id_list = 3;
    string forum_top_list = 4;
}
